[gd_scene load_steps=2 format=2]

[ext_resource path="res://CanvasLayer.gd" type="Script" id=1]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="SendButton" type="Button" parent="."]
margin_left = 332.0
margin_top = 230.0
margin_right = 522.0
margin_bottom = 288.0
text = "Send"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OtherButton" type="Button" parent="."]
margin_left = 554.0
margin_top = 231.234
margin_right = 735.0
margin_bottom = 289.234
text = "Other"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="TextInput" type="TextEdit" parent="."]
margin_left = 326.0
margin_top = 160.0
margin_right = 747.0
margin_bottom = 200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TokenInput" type="TextEdit" parent="."]
margin_left = 401.0
margin_top = 317.0
margin_right = 722.0
margin_bottom = 357.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TokenText" type="RichTextLabel" parent="."]
margin_left = 335.297
margin_top = 319.226
margin_right = 375.297
margin_bottom = 359.226
text = "Token"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Output" type="RichTextLabel" parent="."]
margin_left = 336.0
margin_top = 381.0
margin_right = 705.0
margin_bottom = 562.0
text = "OUTPUT"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="SendButton" to="." method="_on_SendButton_pressed"]
[connection signal="pressed" from="OtherButton" to="." method="_on_OtherButton_pressed"]
